--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
-    <title>hello folks</title>
+    <title>VRK creations
+    </title>
+    <link rel="icon" href="resource/image/icon.jpg" type="image/jpg">
     <head>
         <link rel="stylesheet" href="sheet.css">
     </head>
     <body>
-        <h1>The good boy</h1>
-        <p>This is a paragraph.</p>
+        <h1>The good boys</h1>
+        <p>Dont know what to write here<br>
+          test page:story of good boys
+        </p>
     </body>
 </html>
