--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <title>VRK creations
     </title>
-    <link rel="icon" href="resource/image/icon.jpg" type="image/jpg">
+    <link rel="icon" href="resource/image/icon.jpg" type="image/gif">
     <head>
         <link rel="stylesheet" href="sheet.css">
     </head>
