--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     </title>
     <link rel="icon" href="resource/image/icon.jpg" type="image/gif">
     <head>
-        <link rel="stylesheet" href="sheetl.css">
+        <link rel="stylesheet" href="sheet.css">
     </head>
     <body>
         <h1>The good boys</h1>
