--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
         <link rel="stylesheet" href="sheet.css">
     </head>
     <body>
-        <h1>The good boys</h1>
-        <p>Dont know what to write here<br>
-          test page:story of good boys
+        <h1>Vineeth Rai K</h1>
+        <p>Life is weird enough to get lost in thoughts
         </p>
     </body>
 </html>
