--- a/catphotoapp.html
+++ b/catphotoapp.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>CatPhotoApp</title>
+        <link rel="icon" href="resource/image/icon.jpg" type="image/gif">
     </head>
     <body>
         <h1>CatPhotoApp</h1>
