--- a/catphotoapp.html
+++ b/catphotoapp.html
@@ -59,7 +59,7 @@
             </section>
         </main>
         <footer>
-            <p>No Copyright -<a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p>
+            <p>Thank you for the lessons <a target="_blanck" href="https://www.freecodecamp.org">freeCodeCamp</a></p>
         </footer>
     </body>
 </html>
