--- a/cafemenu.html
+++ b/cafemenu.html
@@ -4,7 +4,7 @@
 <head>
     <title>Cafe Menu</title>
     <link rel="icon" href="https://images.pexels.com/photos/4541324/pexels-photo-4541324.jpeg" ;>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="cafemenustyle.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
