--- a/index.html
+++ b/index.html
@@ -4,32 +4,13 @@
 <head>
     <title>Vineeth Rai K</title>
     <link rel="icon" href="resource/image/icon.jpg">
-    <link rel="stylesheet" href="sheet.css">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <Title>Testing the web😂</Title>
 </head>
 
 <body>
-    <div class="main">
-        <section class="container1 intro">
-            <div class="intro_heading">
-                <h2>Hello, My name is</h2>
-                <h1>Vineeth Rai K</h1>
-            </div>
-        </section>
-        <section class="container1 about">
-            <h1>About</h1>
-        </section>
-        <section class="container1 priject">
-            <h1>Project</h1>
-        </section>
-        <section class="container1 contact">
-            <h1>contact</h1>
-        </section>
-    </div>
-    <!--  -->
-
 
 </body>
 
