--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Vineeth Rai K</title>
-    <link rel="icon" href="resource/image/icon.jpg">
+    <title>Testing the web😂</title>
+    <link rel="icon" href="res/image/icon.jpg">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <Title>Testing the web😂</Title>
+    
 </head>
 
 <body>
+    <div id="one">
+        <p>Hello 1 2 3 html test</p>
 
+        <p>Here is my tribute page <a target="_blank" href="https://vineethraik.github.io/initial-web-dev/projects/tribute-page/">🔗</a></p>
+    </div>
 </body>
 
 </html>
