--- a/projects/tribute-page/index.html
+++ b/projects/tribute-page/index.html
@@ -110,11 +110,12 @@
                     </div>
                 </div>
             </div>
-            <div class="note">
+            <blockquote class="note">
+                <hr>
                 <p>"seldom did one meet a scientist or engineer who was also a poet, a philosopher, an appreciator of fine music, a linguist, and a connoisseur of food and drink"</p>
                 <p>- <em>Julian Hawthorne</em></p>
-                
-            </div>
+                <hr>
+            </blockquote>
             <div id="link-div">
                 <h4>If you want to know more about Nikola Tesla you can checkout on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Nikola_Tesla">Wikipedia entry</a>.</h4>
             </div>
