--- a/projects/tribute-page/index.html
+++ b/projects/tribute-page/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="learning,Vineeth Rai K,HTML,CSS">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="../../res/image/icon.jpg">
         <title>Tribute to Nikola Tesla</title>
