--- a/projects/personal-portfolio/index.html
+++ b/projects/personal-portfolio/index.html
@@ -93,7 +93,7 @@
         </div>
     </main>
     <footer>
-        <p>This site and the projects mentioned are a part of <a target="_blank"
+        <p>This site and the projects mentioned are a assignment of <a target="_blank"
                 href="https://www.freecodecamp.org/">freeCodeCamp</a> Responsive Web Design
             <a target="_blank" href="https://www.freecodecamp.org/learn/2022/responsive-web-design">Course</a>
         </p>
