--- a/projects/tribute-page/index.html
+++ b/projects/tribute-page/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="learning,Vineeth Rai K,HTML,CSS">
-    <meta property="og:title" content="Initial Web-dev" />
-    <meta property="og:url" content="https://vineethraik.github.io/initial-web-dev/projects/tribute-page/" />
-    <meta property="og:image" content="../../res/image/icon.jpg" />
+    <meta property="og:description" content="A tribute page made for freeCodeCamp assignment" />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/7/79/Tesla_circa_1890.jpeg" />
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="../../res/image/icon.jpg">
     <title>Tribute to Nikola Tesla</title>
