--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="one">
         <p>Hello 1 2 3 html test</p>
-        <p>Here is my tribute page <a target="_blank" href="https://vineethraik.github.io/initial-web-dev/projects/tribute-page/">🔗</a></p>
+        <p>Here is my portfolio page <a target="_blank" href="https://vineethraik.github.io/initial-web-dev/projects/personal-portfolio/">🔗</a></p>
     </div>
 </body>
 
